# glmocr-server

./: .env.example  .gitignore  CLAUDE.md  README.md  gunicorn.conf.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: routes.py
app/core/: config.py  converter.py  ocr_service.py  runpod_client.py  runpod_ocr_service.py
app/middleware/: auth.py  rate_limit.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile  docker-compose.yml
